Added initial Centry: Spice road study (#1)
This PR adds the Century spice road study.

* Modelling how the engine mechanic works
* Modelling how the river for both scoring and trader mechanics allow creating the tension


## Game reference

*Game designer*: Emerson Matsuuchi

*Boardgame geek URL*: https://boardgamegeek.com/boardgame/209685/century-spice-road

*Purchase link*: https://www.planbgames.com/en/all-our-games/8-century-spice-road.html

Century: Spice Road is a engine builder game, focus on the timing of how you
trying to achieve your victory card mechanics.  This is a great game to study,
with it's elegant mechanism for building tension within the game.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Template generated example game
+example_game
+example_agent*.h5f
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
